--- a/Fumigation.html
+++ b/Fumigation.html
@@ -173,63 +173,63 @@
             </div>
         </div>
     </section>
-  <!-- Footer Start -->
-  <div class="container-fluid bg-primary text-white mt-5 pt-5 px-sm-3 px-md-5">
-    <div class="row pt-5">
-        <div class="col-lg-3 col-md-6 mb-5">
-            <a href="ecstaticcleaners.com.ng"><h2 class="text-secondary mb-3"><span class="text-white">Ecstatic</span>Cleaners</h2></a>
-            <p>Follow us on: </p>
-            <div class="d-flex justify-content-start mt-4">
-                <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.threads.net/t/Cua7O3uIUdX/?igshid=NTc4MTIwNjQ2YQ"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://wa.me/message/4PEH5J7XS35QP1"><i class="fab fa-whatsapp"></i></a>
-                <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://m.facebook.com/ecstaticcleaners"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="www.instagram.com"><i class="fab fa-instagram"></i></a>
+
+  
+    <!-- Footer Start -->
+    <div class="container-fluid bg-primary text-white mt-5 pt-5 px-sm-3 px-md-5">
+        <div class="row pt-5">
+            <div class="col-lg-3 col-md-6 mb-5">
+                <a href="ecstaticcleaners.com.ng"><h2 class="text-secondary mb-3"><span class="text-white">Ecstatic</span>Cleaners</h2></a>
+                <p>Follow us on: </p>
+                <div class="d-flex justify-content-start mt-4">
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://twitter.com/EcstaticStarch"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://wa.me/message/4PEH5J7XS35QP1"><i class="fab fa-whatsapp"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://m.facebook.com/ecstaticcleaners"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://instagram.com/ecstatic_cleaners"><i class="fab fa-instagram"></i></a>
+                </div>
             </div>
-        </div>
-        <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-white mb-4">Get In Touch</h4>
-            <p><i class="fa fa-map-marker-alt mr-2"></i>9, Akinwunmi street, Alagomeji, Yaba, Lagos</p>
-            <p><i class="fa fa-phone-alt mr-2"></i>+234 809 303 9272</p>
-            <p><i class="fa fa-envelope mr-2"></i>ecstaticcleaners@gmail.com</p>
-        </div>
-        <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-white mb-4">Quick Links</h4>
-            <div class="d-flex flex-column justify-content-start">
-                <a class="text-white mb-3" href="Homepage.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                <a class="text-white mb-3" href="About Us.html"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                <a class="text-white mb-3" href="Price List.html"><i class="fa fa-angle-right mr-2"></i>Price List</a>
-                <a class="text-white mb-3" href="Dry Cleaning.html"><i class="fa fa-angle-right mr-2"></i>Dry Cleaning</a>
-                <a class="text-white mb-3" href="Carpets and Rugs.html"><i class="fa fa-angle-right mr-2"></i>Carpets and Rugs</a>
-                <a class="text-white mb-3" href="Post Construction.html"><i class="fa fa-angle-right mr-2"></i>Post Construction</a>
-                <a class="text-white mb-3" href="Fumigation.html"><i class="fa fa-angle-right mr-2"></i>Fumigation</a>
-                <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+            <div class="col-lg-3 col-md-6 mb-5">
+                <h4 class="text-white mb-4">Get In Touch</h4>
+                <p><i class="fa fa-map-marker-alt mr-2"></i>9, Akinwunmi street, Alagomeji, Yaba, Lagos</p>
+                <p><i class="fa fa-phone-alt mr-2"></i>+234 809 303 9272</p>
+                <p><i class="fa fa-envelope mr-2"></i>ecstaticcleaners@gmail.com</p>
             </div>
-        </div>
-        
-        <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-white mb-4">Send us an E-mail.</h4>
-            <form action="">
-                <div class="form-group">
-                    <input type="text" class="form-control border-0" placeholder="Your Name" required="required" />
+            <div class="col-lg-3 col-md-6 mb-5">
+                <h4 class="text-white mb-4">Quick Links</h4>
+                <div class="d-flex flex-column justify-content-start">
+                    <a class="text-white mb-3" href="Homepage.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                    <a class="text-white mb-3" href="About Us.html"><i class="fa fa-angle-right mr-2"></i>About Us</a>
+                    <a class="text-white mb-3" href="Price List.html"><i class="fa fa-angle-right mr-2"></i>Price List</a>
+                    <a class="text-white mb-3" href="Dry Cleaning.html"><i class="fa fa-angle-right mr-2"></i>Dry Cleaning</a>
+                    <a class="text-white mb-3" href="Carpets and Rugs.html"><i class="fa fa-angle-right mr-2"></i>Carpets and Rugs</a>
+                    <a class="text-white mb-3" href="Post Construction.html"><i class="fa fa-angle-right mr-2"></i>Post Construction</a>
+                    <a class="text-white mb-3" href="Fumigation.html"><i class="fa fa-angle-right mr-2"></i>Fumigation</a>
+                    <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                 </div>
-                <div class="form-group">
-                    <input type="email" class="form-control border-0" placeholder="Your Email" required="required" />
-                </div>
-                <div>
-                    <button class="btn btn-lg btn-secondary btn-block border-0" type="submit"><a href="https://www.ecstaticcleaners.@gmail.com" style="text-decoration: none;" class="text-white">Submit Now</a></button>
-                </div>
-            </form>
+            </div>
+            
+            <div class="col-lg-3 col-md-6 mb-5">
+                <h4 class="text-white mb-4">Send us an E-mail.</h4>
+                <form action="">
+                    <div class="form-group">
+                        <input type="text" class="form-control border-0" placeholder="Your Name" required="required" />
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control border-0" placeholder="Your Email" required="required" />
+                    </div>
+                    <div>
+                        <button class="btn btn-lg btn-secondary btn-block border-0" type="submit"><a href="https://www.ecstaticcleaners.@gmail.com" style="text-decoration: none;" class="text-white">Submit Now</a></button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</div>
-<div class="container-fluid bg-dark text-white py-4 px-sm-3 px-md-5">
-    <p class="m-0 text-center text-white">
-        &copy; <a class="text-white font-weight-medium" href="https://ecstaticcleaners.com">Ecstatic Cleaners</a>. All Rights Reserved. 
-        Designed by<a class="text-white font-weight-medium" href="https://www.YTDesigns.com"></a> YT Designs</p>
-</div>
-<!-- Footer End -->
-
-
+    <div class="container-fluid bg-dark text-white py-4 px-sm-3 px-md-5">
+        <p class="m-0 text-center text-white">
+            &copy; <a class="text-white font-weight-medium" href="https://ecstaticcleaners.com">Ecstatic Cleaners</a>. All Rights Reserved. 
+			Designed by<a class="text-white font-weight-medium" href="https://www.YTDesigns.com"></a> YT Designs</p>
+    </div>
+    <!-- Footer End -->
 <!-- Back to Top -->
 <a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
