--- a/Home and Office Cleaning.html
+++ b/Home and Office Cleaning.html
@@ -154,6 +154,7 @@
         </div>
     </section>
 
+   
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-white mt-5 pt-5 px-sm-3 px-md-5">
         <div class="row pt-5">
@@ -161,10 +162,10 @@
                 <a href="ecstaticcleaners.com.ng"><h2 class="text-secondary mb-3"><span class="text-white">Ecstatic</span>Cleaners</h2></a>
                 <p>Follow us on: </p>
                 <div class="d-flex justify-content-start mt-4">
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.threads.net/t/Cua7O3uIUdX/?igshid=NTc4MTIwNjQ2YQ"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://twitter.com/EcstaticStarch"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://wa.me/message/4PEH5J7XS35QP1"><i class="fab fa-whatsapp"></i></a>
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://m.facebook.com/ecstaticcleaners"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="www.instagram.com"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://instagram.com/ecstatic_cleaners"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
@@ -186,6 +187,7 @@
                     <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                 </div>
             </div>
+            
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-white mb-4">Send us an E-mail.</h4>
                 <form action="">
@@ -205,10 +207,11 @@
     <div class="container-fluid bg-dark text-white py-4 px-sm-3 px-md-5">
         <p class="m-0 text-center text-white">
             &copy; <a class="text-white font-weight-medium" href="https://ecstaticcleaners.com">Ecstatic Cleaners</a>. All Rights Reserved. 
-            Designed by <a class="text-white font-weight-medium" href="https://www.YTDesigns.com"></a> YT Designs</p>
+			Designed by<a class="text-white font-weight-medium" href="https://www.YTDesigns.com"></a> YT Designs</p>
     </div>
     <!-- Footer End -->
 
+    
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
